Remove some blog

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 
 <p>　　喜欢宅在家里写写代码，也喜欢陪着<a href="http://mia2002.cn">女朋友</a>到处跑。喜欢安静的生活。</p>
 
-<p>　　一些<a href="https://github.com/alan-yeh">开源项目</a>。</p>
+<p>　　一些<a href="http://git.yerl.cn">开源项目</a>。</p>
 
         </section>
 
